--- a/edificios-centro.html
+++ b/edificios-centro.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Edificios - Zona Norte</title>
+  <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/components/navbar/">
   <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
