--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WATERMELON SRL</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
+
 <body>
     <header>
-        <nav>
-            <h1>EMPRESA DE MANTENIMIENTO WATERMELON SRL</h1>
+        <nav class="encabezadodepagina">
+            <h1 class="titulo">EMPRESA DE MANTENIMIENTO WATERMELON SRL</h1>
             <a href="zonas.html" class="boton">Inicio de Sesión</a>
         </nav>
+
     </header>
 
     <main>
@@ -20,7 +23,9 @@
         </figure>
 
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nam dolore expedita asperiores, in earum quod minus nulla porro commodi illo qui veritatis aspernatur vero doloremque neque quidem! Cum, quae?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nam dolore expedita asperiores, in earum
+                quod minus nulla porro commodi illo qui veritatis aspernatur vero doloremque neque quidem! Cum, quae?
+            </p>
         </section>
     </main>
 
@@ -30,4 +35,5 @@
         <a href="https://www.instagram.com" target="_blank">Instagram</a>
     </footer>
 </body>
+
 </html>
