--- a/zonas.html
+++ b/zonas.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
+    <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/components/navbar/">
     <link rel="stylesheet" href="estilos.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zonas</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-            <h3>MANTENIMIENTO WATERMELON SRL</h3>
-            <a href="index.html" class="boton">Cerrar Sesión</a>
-        </nav>
+    <header class="encabezadodepagina">
+        <h3>MANTENIMIENTO WATERMELON SRL</h3>
+        <a href="index.html" class="boton">Volver</a>
     </header>
 
     <main>
@@ -37,4 +38,5 @@
         <a href="https://www.instagram.com" target="_blank">Instagram</a>
     </footer>
 </body>
+
 </html>
