--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WATERMELON SRL</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="estilos/estilos.css">
 </head>
 
 <body>
     <header>
-        <nav class="encabezadodepagina">
-            <h1 class="titulo">EMPRESA DE MANTENIMIENTO WATERMELON SRL</h1>
-            <a href="zonas.html" class="boton">Inicio de Sesión</a>
+        <nav class="navbar bg-info px-4 py-3 d-flex justify-content-between">
+            <h1 class="titulo m-0">EMPRESA DE MANTENIMIENTO WATERMELON SRL</h1>
+            <a href="paginas/zonas.html" class="btn btn-primary">Inicio de Sesión</a>
         </nav>
-
     </header>
 
     <main>
         <figure>
-            <img src="Captura de pantalla 2025-05-19 171123.png" alt="Logo de la empresa WATERMELON SRL">
+            <img src="Img/Captura de pantalla 2025-05-19 171123.png" alt="Logo de la empresa WATERMELON SRL">
         </figure>
 
         <section>
@@ -29,11 +29,13 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="bg-light py-3 text-center">
         <p>Seguinos en nuestras redes sociales:</p>
-        <a href="https://www.facebook.com" target="_blank">Facebook</a>
-        <a href="https://www.instagram.com" target="_blank">Instagram</a>
+        <a href="https://www.facebook.com" target="_blank" class="me-3 text-decoration-none">Facebook</a>
+        <a href="https://www.instagram.com" target="_blank" class="text-decoration-none">Instagram</a>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
