--- a/paginas/edificios-sur.html
+++ b/paginas/edificios-sur.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Edificios - Zona Norte</title>
-  <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/components/navbar/">
-  <link rel="stylesheet" href="estilos.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Edificios - Zona Sur</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/estilos/estilos.css">
 </head>
+
 <body>
 
-  <header class="encabezado">
-    <h3>MANTENIMIENTO WATERMELON SRL</h3>
-    <a href="zonas.html" class="boton">Volver a Zonas</a>
+  <!-- encabezado con Bootstrap -->
+  <header>
+    <nav class="navbar bg-info px-4 py-3 d-flex justify-content-between">
+      <h1 class="m-0">MANTENIMIENTO WATERMELON SRL</h1>
+      <a href="zonas.html" class="btn btn-primary">Volver a Zonas</a>
+    </nav>
   </header>
 
   <main class="contenedor">
-    <h4>Edificios - Zona Norte</h4>
+    <h4>Edificios - Zona Sur</h4>
 
     <section class="lista-edificios">
 
-     
-      <!-- EDIFICIO 1 - ZN-->
+      <!-- EDIFICIO 1 - ZS -->
       <div class="edificio">
         <input type="checkbox" id="edificio_1" class="boton_de_edificios">
         <label for="edificio_1" class="titulo-edificio">Edificio n.1</label>
         <div class="opciones">
-          <a class="opcion" href="tipo-edificio1-norte-op1.html">Opción 1</a>
+          <a class="opcion" href="edificios sur/zs_edf1_op1.html">Opción 1</a>
           <a class="opcion" href="tipo-edificio1-norte-op2.html">Opción 2</a>
           <a class="opcion" href="tipo-edificio1-norte-op3.html">Opción 3</a>
         </div>
       </div>
 
-      <!-- EDIFICIO 2 - ZN-->
+      <!-- EDIFICIO 2 - ZS -->
       <div class="edificio">
         <input type="checkbox" id="edificio_2" class="boton_de_edificios">
         <label for="edificio_2" class="titulo-edificio">Edificio n.2</label>
@@ -42,7 +46,7 @@
         </div>
       </div>
 
-      <!-- EDIFICIO 3 - ZN-->
+      <!-- EDIFICIO 3 - ZS -->
       <div class="edificio">
         <input type="checkbox" id="edificio_3" class="boton_de_edificios">
         <label for="edificio_3" class="titulo-edificio">Edificio n.3</label>
@@ -53,7 +57,7 @@
         </div>
       </div>
 
-      <!-- EDIFICIO 4 - ZN-->
+      <!-- EDIFICIO 4 - ZS -->
       <div class="edificio">
         <input type="checkbox" id="edificio_4" class="boton_de_edificios">
         <label for="edificio_4" class="titulo-edificio">Edificio n.4</label>
@@ -64,7 +68,7 @@
         </div>
       </div>
 
-      <!-- EDIFICIO 5 - ZN-->
+      <!-- EDIFICIO 5 - ZS -->
       <div class="edificio">
         <input type="checkbox" id="edificio_5" class="boton_de_edificios">
         <label for="edificio_5" class="titulo-edificio">Edificio n.5</label>
@@ -78,12 +82,14 @@
     </section>
   </main>
 
-<footer>
+  <!-- footer con Bootstrap -->
+  <footer class="bg-light py-3 text-center mt-4">
     <p>Links de las redes sociales de la Empresa</p>
-    <a href="/Facebook.com">Facebook</a>
-    <br>
-    <a href="/instagram.com">Instagram</a>
+    <a href="https://www.facebook.com" target="_blank" class="me-3 text-decoration-none">Facebook</a>
+    <a href="https://www.instagram.com" target="_blank" class="text-decoration-none">Instagram</a>
   </footer>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
