--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <header>
         <nav class="navbar bg-info px-4 py-3 d-flex justify-content-between">
             <h1 class="titulo m-0">EMPRESA DE MANTENIMIENTO WATERMELON SRL</h1>
-            <a href="paginas/zonas.html" class="btn btn-primary">Inicio de Sesión</a>
+            <div class="d-flex gap-1">
+                <a href="paginas/zonanorte.html" class="btn btn-primary">Zona Norte</a>
+                <a href="paginas/zonacentro.html" class="btn btn-primary">Zona Centro</a>
+                <a href="paginas/zonasur.html" class="btn btn-primary">Zona Sur</a>
+            </div>
+
         </nav>
     </header>
 
@@ -23,8 +28,12 @@
         </figure>
 
         <section>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde nam dolore expedita asperiores, in earum
-                quod minus nulla porro commodi illo qui veritatis aspernatur vero doloremque neque quidem! Cum, quae?
+            <p>Nos especializamos en el mantenimiento integral de edificios, brindando soluciones preventivas y
+                correctivas para garantizar el correcto funcionamiento de todas las instalaciones. Nuestro servicio
+                abarca sistemas eléctricos, sanitarios, de climatización, ascensores, iluminación, estructura edilicia y
+                espacios comunes. Realizamos inspecciones periódicas, reparaciones, mejoras y acondicionamientos según
+                las necesidades del cliente, priorizando la seguridad, la eficiencia operativa y la prolongación de la
+                vida útil de los activos del edificio.
             </p>
         </section>
     </main>
