--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WATERMELON SRL</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="estilos/estilos.css">
+    <link rel="stylesheet" href="./estilos/estilos.css">
 </head>
 
 <body>
@@ -14,21 +14,21 @@
         <nav class="navbar bg-info px-4 py-3 d-flex justify-content-between">
             <h1 class="titulo m-0">EMPRESA DE MANTENIMIENTO WATERMELON SRL</h1>
             <div class="d-flex gap-1">
-                <a href="paginas/zonanorte.html" class="btn btn-primary">Zona Norte</a>
-                <a href="paginas/zonacentro.html" class="btn btn-primary">Zona Centro</a>
-                <a href="paginas/zonasur.html" class="btn btn-primary">Zona Sur</a>
+                <a href="./paginas/zonanorte.html" class="btn btn-primary">Zona Norte</a>
+                <a href="./paginas/zonacentro.html" class="btn btn-primary">Zona Centro</a>
+                <a href="./paginas/zonasur.html" class="btn btn-primary">Zona Sur</a>
             </div>
-
         </nav>
     </header>
 
-    <main>
-        <figure>
-            <img src="Img/Captura de pantalla 2025-05-19 171123.png" alt="Logo de la empresa WATERMELON SRL">
+    <main class="container my-4">
+        <figure class="text-center">
+            <img src="./Img/Captura de pantalla 2025-05-19 171123.png" alt="Logo de la empresa WATERMELON SRL" class="img-fluid">
         </figure>
 
-        <section>
-            <p>Nos especializamos en el mantenimiento integral de edificios, brindando soluciones preventivas y
+        <section class="mt-4">
+            <p>
+                Nos especializamos en el mantenimiento integral de edificios, brindando soluciones preventivas y
                 correctivas para garantizar el correcto funcionamiento de todas las instalaciones. Nuestro servicio
                 abarca sistemas eléctricos, sanitarios, de climatización, ascensores, iluminación, estructura edilicia y
                 espacios comunes. Realizamos inspecciones periódicas, reparaciones, mejoras y acondicionamientos según
