--- a/paginas/edificios-norte/zn_edf1_op1.html
+++ b/paginas/edificios-norte/zn_edf1_op1.html
@@ -26,7 +26,7 @@
 
 
         <div class="d-flex flex-column flex-md-row align-items-center gap-4 mb-5">
-            <img src="/img/norte ejemplo.png" alt="Edificio Zona Norte" class="img-fluid" style="max-width: 300px;">
+            <img src="/img/norte_ejemplo.png" alt="Edificio Zona Norte" class="img-fluid" style="max-width: 300px;">
             <p class="text-start">
                 En Mantenimiento Watermelon SRL entendemos que el mantenimiento preventivo es clave para garantizar la
                 continuidad operativa, la eficiencia energética y la seguridad de las instalaciones. Nuestro enfoque se
