--- a/paginas/edificios-sur/zs_edf1_op2.html
+++ b/paginas/edificios-sur/zs_edf1_op2.html
@@ -25,7 +25,7 @@
   <main class="container mt-4">
 
     <div class="d-flex flex-column flex-md-row align-items-center gap-4 mb-5">
-      <img src="/img/centro ejemplo.png" alt="Edificio Zona Sur" class="img-fluid" style="max-width: 300px;">
+      <img src="/img/centro_ejemplo.png" alt="Edificio Zona Sur" class="img-fluid" style="max-width: 300px;">
       <p class="text-start">
         El mantenimiento correctivo tiene como objetivo restablecer el funcionamiento de instalaciones o equipos que
         han sufrido fallas. En Watermelon SRL respondemos con rapidez y eficacia ante incidencias imprevistas,
