--- a/paginas/edificios-sur/zs_edf1_op3.html
+++ b/paginas/edificios-sur/zs_edf1_op3.html
@@ -25,7 +25,7 @@
   <main class="container mt-4">
 
     <div class="d-flex flex-column flex-md-row align-items-center gap-4 mb-5">
-      <img src="/Img/sur ejemplo.png" alt="Edificio Zona Sur" class="img-fluid" style="max-width: 300px;">
+      <img src="/Img/sur_ejemplo.png" alt="Edificio Zona Sur" class="img-fluid" style="max-width: 300px;">
       <p class="text-start">
         El mantenimiento predictivo permite anticipar fallas mediante el monitoreo constante del estado operativo de los
         equipos. En Watermelon SRL implementamos tecnologías de diagnóstico, análisis de tendencias y mediciones en
