--- a/paginas/zonacentro.html
+++ b/paginas/zonacentro.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Edificios - Zona Centro</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="estilos/estilos.css">
+  <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
 <body>
@@ -16,14 +16,14 @@
     <nav class="navbar bg-info px-4 py-3 d-flex justify-content-between align-items-center">
       <h1 class="m-0">MANTENIMIENTO WATERMELON SRL</h1>
       <div class="d-flex gap-1">
-        <a href="/index.html" class="btn btn-primary">Inicio</a>
-        <a href="zonanorte.html" class="btn btn-primary">Zona Norte</a>
-        <a href="zonasur.html" class="btn btn-primary">Zona Sur</a>
+        <a href="../index.html" class="btn btn-primary">Inicio</a>
+        <a href="./zonanorte.html" class="btn btn-primary">Zona Norte</a>
+        <a href="./zonasur.html" class="btn btn-primary">Zona Sur</a>
       </div>
     </nav>
   </header>
 
-  <main class="contenedor">
+  <main class="container my-4">
     <h4>Edificios - Zona Centro</h4>
     <p>Barrios: Balvanera, San Nicolás, Monserrat, San Telmo, Almagro, Villa Crespo, Constitución.
       Límites: Desde Av. Córdoba y Av. Callao hasta Av. La Plata y Av. Entre Ríos. Abarca el casco histórico y
@@ -33,42 +33,39 @@
 
       <!-- EDIFICIO 1 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico centro 1.jpg" alt="Edificio 1" class="imagen-edificio" style="max-width: 250px;">
-
+        <img src="/Img/Edificios/Edifico_centro1.jpg" alt="Edificio 1" class="imagen-edificio" style="max-width: 250px;">
         <div class="d-flex flex-column">
-          <label for="edificio_c1" class="titulo-edificio mb-3">Edificio n.1</label>
+          <label class="titulo-edificio mb-3">Edificio n.1</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="/paginas/edificios-centro/zc_edf1_op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="/paginas/edificios-centro/zc_edf1_op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="/paginas/edificios-centro/zc_edf1_op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-centro/zc_edf1_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-centro/zc_edf1_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-centro/zc_edf1_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
 
       <!-- EDIFICIO 2 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico centro 2.jpg" alt="Edificio 2" class="imagen-edificio" style="max-width: 250px;">
-
+        <img src="/Img/Edificios/Edifico_centro2.jpg" alt="Edificio 2" class="imagen-edificio" style="max-width: 250px;">
         <div class="d-flex flex-column">
-          <label for="edificio_c2" class="titulo-edificio mb-3">Edificio n.2</label>
+          <label class="titulo-edificio mb-3">Edificio n.2</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio2-norte-op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio2-norte-op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio2-norte-op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-centro/zc_edf2_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-centro/zc_edf2_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-centro/zc_edf2_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
 
       <!-- EDIFICIO 3 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico centro 3-jpg.webp" alt="Edificio 3" class="imagen-edificio" style="max-width: 250px;">
-
+        <img src="/Img/Edificios/Edifico_centro3-jpg.webp" alt="Edificio 3" class="imagen-edificio" style="max-width: 250px;">
         <div class="d-flex flex-column">
-          <label for="edificio_c3" class="titulo-edificio mb-3">Edificio n.3</label>
+          <label class="titulo-edificio mb-3">Edificio n.3</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio3-norte-op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio3-norte-op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio3-norte-op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-centro/zc_edf3_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-centro/zc_edf3_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-centro/zc_edf3_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
