--- a/paginas/zonanorte.html
+++ b/paginas/zonanorte.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Edificios - Zona Norte</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="estilos/estilos.css">
+  <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
 <body>
@@ -16,14 +16,14 @@
     <nav class="navbar bg-info px-4 py-3 d-flex justify-content-between align-items-center">
       <h1 class="m-0">MANTENIMIENTO WATERMELON SRL</h1>
       <div class="d-flex gap-1">
-        <a href="/index.html" class="btn btn-primary">Inicio</a>
-        <a href="zonacentro.html" class="btn btn-primary">Zona Centro</a>
-        <a href="zonasur.html" class="btn btn-primary">Zona Sur</a>
+        <a href="../index.html" class="btn btn-primary">Inicio</a>
+        <a href="./zonacentro.html" class="btn btn-primary">Zona Centro</a>
+        <a href="./zonasur.html" class="btn btn-primary">Zona Sur</a>
       </div>
     </nav>
   </header>
 
-  <main class="contenedor">
+  <main class="container my-4">
     <h4>Edificios - Zona Norte</h4>
 
     <p>Barrios: Belgrano, Núñez, Colegiales, Palermo, Recoleta, Retiro.
@@ -32,57 +32,44 @@
 
     <section class="lista-edificios">
 
+      <!-- Edificio 1 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico norte 1.jpg" alt="Edificio 1" class="imagen-edificio"
-          style="max-width: 250px;">
-
+        <img src="/Img/Edificios/Edifico_norte1.jpg" alt="Edificio 1" class="imagen-edificio" style="max-width: 250px;">
         <div class="d-flex flex-column">
-          <label for="edificio_1" class="titulo-edificio mb-3">Edificio n.1</label>
-
+          <label class="titulo-edificio mb-3">Edificio n.1</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="/paginas/edificios-norte/zn_edf1_op1.html">Mant.
-              Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="/paginas/edificios-norte/zn_edf1_op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="/paginas/edificios-norte/zn_edf1_op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf1_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf1_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf1_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
 
+      <!-- Edificio 2 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-
-        <img src="/Img/Edificios/Edifico norte 2.jpg" alt="Edificio 2" class="imagen-edificio"
-          style="max-width: 250px;">
-
+        <img src="/Img/Edificios/Edifico_norte2.jpg" alt="Edificio 2" class="imagen-edificio" style="max-width: 250px;">
         <div class="d-flex flex-column">
-          <label for="edificio_2" class="titulo-edificio mb-3">Edificio n.2</label>
-
+          <label class="titulo-edificio mb-3">Edificio n.2</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio2-norte-op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio2-norte-op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio2-norte-op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf2_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf2_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf2_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
 
-
-
+      <!-- Edificio 3 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-
-        <img src="/Img/Edificios/Edifico norte 3.png" alt="Edificio 3" class="imagen-edificio"
-          style="max-width: 250px;">
-
+        <img src="/Img/Edificios/Edifico_norte3.png" alt="Edificio 3" class="imagen-edificio" style="max-width: 250px;">
         <div class="d-flex flex-column">
-          <label for="edificio_3" class="titulo-edificio mb-3">Edificio n.3</label>
-
+          <label class="titulo-edificio mb-3">Edificio n.3</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio3-norte-op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio3-norte-op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio3-norte-op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf3_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf3_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf3_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
-
-
 
     </section>
   </main>
