--- a/paginas/zonasur.html
+++ b/paginas/zonasur.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Edificios - Zona Sur</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="estilos/estilos.css">
+  <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
 
 <body>
@@ -16,14 +16,14 @@
     <nav class="navbar bg-info px-4 py-3 d-flex justify-content-between align-items-center">
       <h1 class="m-0">MANTENIMIENTO WATERMELON SRL</h1>
       <div class="d-flex gap-1">
-        <a href="/index.html" class="btn btn-primary">Inicio</a>
-        <a href="zonanorte.html" class="btn btn-primary">Zona Norte</a>
-        <a href="zonacentro.html" class="btn btn-primary">Zona Centro</a>
+        <a href="../index.html" class="btn btn-primary">Inicio</a>
+        <a href="./zonanorte.html" class="btn btn-primary">Zona Norte</a>
+        <a href="./zonacentro.html" class="btn btn-primary">Zona Centro</a>
       </div>
     </nav>
   </header>
 
-  <main class="contenedor">
+  <main class="container my-4">
     <h4>Edificios - Zona Sur</h4>
     <p>Barrios: Barracas, La Boca, Parque Patricios, Nueva Pompeya, Villa Lugano, Villa Soldati, Villa Riachuelo.
       Límites: Desde Av. La Plata hacia el suroeste, extendiéndose hasta el Riachuelo y el límite con Provincia.
@@ -33,42 +33,42 @@
 
       <!-- EDIFICIO 1 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico sur 1.jpg" alt="Edificio 1" class="imagen-edificio" style="max-width: 250px;">
+        <img src="../Img/Edificios/Edifico_sur1.jpg" alt="Edificio 1" class="imagen-edificio" style="max-width: 250px;">
 
         <div class="d-flex flex-column">
-          <label for="edificio_s1" class="titulo-edificio mb-3">Edificio n.1</label>
+          <label class="titulo-edificio mb-3">Edificio n.1</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="/paginas/edificios-sur/zs_edf1_op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="/paginas/edificios-sur/zs_edf1_op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="/paginas/edificios-sur/zs_edf1_op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf1_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf1_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf1_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
 
       <!-- EDIFICIO 2 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico sur 2.jpg" alt="Edificio 2" class="imagen-edificio" style="max-width: 250px;">
+        <img src="../Img/Edificios/Edifico_sur2.jpg" alt="Edificio 2" class="imagen-edificio" style="max-width: 250px;">
 
         <div class="d-flex flex-column">
-          <label for="edificio_s2" class="titulo-edificio mb-3">Edificio n.2</label>
+          <label class="titulo-edificio mb-3">Edificio n.2</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio2-norte-op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio2-norte-op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio2-norte-op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf2_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf2_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf2_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
 
       <!-- EDIFICIO 3 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico sur 3.jpg" alt="Edificio 3" class="imagen-edificio" style="max-width: 250px;">
+        <img src="../Img/Edificios/Edifico_sur3.jpg" alt="Edificio 3" class="imagen-edificio" style="max-width: 250px;">
 
         <div class="d-flex flex-column">
-          <label for="edificio_s3" class="titulo-edificio mb-3">Edificio n.3</label>
+          <label class="titulo-edificio mb-3">Edificio n.3</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio3-norte-op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio3-norte-op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="tipo-edificio3-norte-op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf3_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf3_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf3_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
