--- a/paginas/zonanorte.html
+++ b/paginas/zonanorte.html
@@ -34,20 +34,20 @@
 
       <!-- Edificio 1 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico_norte1.jpg" alt="Edificio 1" class="imagen-edificio" style="max-width: 250px;">
+        <img src="../Img/Edificios/Edifico_norte1.jpg" alt="Edificio 1" class="imagen-edificio" style="max-width: 250px;">
         <div class="d-flex flex-column">
           <label class="titulo-edificio mb-3">Edificio n.1</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf1_op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf1_op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="./edificios-norte/zn_edf1_op3.html">Mant. Predictivo</a>
-          </div>
+            <a class="opcion btn btn-outline-primary" href="../edificios-norte/zn_edf1_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-norte/zn_edf1_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-norte/zn_edf1_op3.html">Mant. Predictivo</a>
+          </div> 
         </div>
       </div>
 
       <!-- Edificio 2 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico_norte2.jpg" alt="Edificio 2" class="imagen-edificio" style="max-width: 250px;">
+        <img src="../Img/Edificios/Edifico_norte2.jpg" alt="Edificio 2" class="imagen-edificio" style="max-width: 250px;">
         <div class="d-flex flex-column">
           <label class="titulo-edificio mb-3">Edificio n.2</label>
           <div class="opciones d-flex flex-column gap-2">
@@ -60,7 +60,7 @@
 
       <!-- Edificio 3 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="/Img/Edificios/Edifico_norte3.png" alt="Edificio 3" class="imagen-edificio" style="max-width: 250px;">
+        <img src="../Img/Edificios/Edifico_norte3.png" alt="Edificio 3" class="imagen-edificio" style="max-width: 250px;">
         <div class="d-flex flex-column">
           <label class="titulo-edificio mb-3">Edificio n.3</label>
           <div class="opciones d-flex flex-column gap-2">
