--- a/paginas/zonasur.html
+++ b/paginas/zonasur.html
@@ -38,9 +38,9 @@
         <div class="d-flex flex-column">
           <label class="titulo-edificio mb-3">Edificio n.1</label>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf1_op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf1_op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf1_op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf1_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf1_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf1_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
