--- a/paginas/zonasur.html
+++ b/paginas/zonasur.html
@@ -11,7 +11,7 @@
 
 <body>
 
-  <!-- encabezado con Bootstrap -->
+  <!-- Encabezado -->
   <header>
     <nav class="navbar bg-info px-4 py-3 d-flex justify-content-between align-items-center">
       <h1 class="m-0">MANTENIMIENTO WATERMELON SRL</h1>
@@ -33,10 +33,10 @@
 
       <!-- EDIFICIO 1 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="../Img/Edificios/Edifico_sur1.jpg" alt="Edificio 1" class="imagen-edificio" style="max-width: 250px;">
+        <img src="../Img/Edificios/Edificio_sur1.jpg" alt="Foto del Edificio 1 en Zona Sur" class="imagen-edificio">
 
         <div class="d-flex flex-column">
-          <label class="titulo-edificio mb-3">Edificio n.1</label>
+          <h5 class="titulo-edificio mb-3">Edificio n.1</h5>
           <div class="opciones d-flex flex-column gap-2">
             <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf1_op1.html">Mant. Preventivo</a>
             <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf1_op2.html">Mant. Correctivo</a>
@@ -47,28 +47,28 @@
 
       <!-- EDIFICIO 2 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="../Img/Edificios/Edifico_sur2.jpg" alt="Edificio 2" class="imagen-edificio" style="max-width: 250px;">
+        <img src="../Img/Edificios/Edificio_sur2.jpg" alt="Foto del Edificio 2 en Zona Sur" class="imagen-edificio">
 
         <div class="d-flex flex-column">
-          <label class="titulo-edificio mb-3">Edificio n.2</label>
+          <h5 class="titulo-edificio mb-3">Edificio n.2</h5>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf2_op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf2_op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf2_op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf2_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf2_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf2_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
 
       <!-- EDIFICIO 3 -->
       <div class="edificio d-flex flex-column flex-md-row align-items-start gap-3 mb-4">
-        <img src="../Img/Edificios/Edifico_sur3.jpg" alt="Edificio 3" class="imagen-edificio" style="max-width: 250px;">
+        <img src="../Img/Edificios/Edificio_sur3.jpg" alt="Foto del Edificio 3 en Zona Sur" class="imagen-edificio">
 
         <div class="d-flex flex-column">
-          <label class="titulo-edificio mb-3">Edificio n.3</label>
+          <h5 class="titulo-edificio mb-3">Edificio n.3</h5>
           <div class="opciones d-flex flex-column gap-2">
-            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf3_op1.html">Mant. Preventivo</a>
-            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf3_op2.html">Mant. Correctivo</a>
-            <a class="opcion btn btn-outline-primary" href="./edificios-sur/zs_edf3_op3.html">Mant. Predictivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf3_op1.html">Mant. Preventivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf3_op2.html">Mant. Correctivo</a>
+            <a class="opcion btn btn-outline-primary" href="../edificios-sur/zs_edf3_op3.html">Mant. Predictivo</a>
           </div>
         </div>
       </div>
@@ -76,7 +76,7 @@
     </section>
   </main>
 
-  <!-- footer con Bootstrap -->
+  <!-- Footer -->
   <footer class="bg-light py-3 text-center mt-4">
     <p>Links de las redes sociales de la Empresa</p>
     <a href="https://www.facebook.com" target="_blank" class="me-3 text-decoration-none">Facebook</a>
